crates/reap-durable-writer/tests/ui/durable_acknowledgement_cannot_be_forged.rs
use reap_durable_writer::DurableAcknowledgement;

fn forge() -> DurableAcknowledgement {
    DurableAcknowledgement { _private: () }
}

fn main() {}
